# plotly_spc_charts

./: .gitignore  .readthedocs.yml  README.md  README.rst  main.py  pyproject.toml  requirements.txt  spc_charts.py  spc_environment.yml
constants/: factor_values_for_shewart_charts.xlsx  spc_constants.py
docs/source/: charts.rst  conf.py  index.rst  install.rst  intro.rst  modules.rst  spc_charts.rst
examples/: example_individual_mr.py  example_x_bar_r.py  imr.json  model_params.json  spc_example_data_cooling_water.csv
examples/.ipynb_checkpoints/: XbarR_example-checkpoint.ipynb
examples/IndividualMR/: IndividualMR_example.ipynb  chart_params.json
examples/Run/: Run_example.ipynb  Run_example_data.csv
examples/Run/.ipynb_checkpoints/: Run_example-checkpoint.ipynb
examples/XbarR/: XbarR_example.ipynb  chart_params.json
examples/XbarR/.ipynb_checkpoints/: XbarR_example-checkpoint.ipynb
plotly_spc_charts/: charts.py
plotly_spc_charts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
spc_charts/: factor_values_for_shewart_charts.csv  spc_charts.py
spc_charts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: XbarR_test_data.csv  control_chart_example_data.xlsx  model_params.json  test_charts.py  test_spc_charts.py
tests/IndividualMR_test_data/: IndividualMR_test_data.csv
tests/XbarR_test_data/: XbarR_expected_out_of_control.csv  XbarR_expected_params.json  XbarR_model_params.json  XbarR_test_data.csv
