[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plotly_spc_charts"
version = "0.0.13"
authors = [
  { name="Julian Wright", email="joolianwright@googlemail.com" },
]
description = "Plotly charts for Statistical Process Control."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "plotly",
    "kaleido",
    "importlib_resources",
]

[project.urls]
Homepage = "https://github.com/joolian/plotly_spc_charts"
Documentation = "https://plotly-spc-charts.readthedocs.io/en/latest/"
Examples = "https://github.com/joolian/plotly_spc_charts/tree/package/examples"

[tool.setuptools.packages.find]
include = ["plotly_spc_charts"]
namespaces = false

[tool.setuptools.package-data]
plotly_spc_charts = ["*.csv"]

[tool.setuptools]
include-package-data = true